--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -274,6 +274,9 @@
             android:foregroundServiceType="dataSync"
             tools:node="merge" />
 
+        <service android:name=".data.torrentServer.service.TorrentServerService" />
+        <service android:name=".data.torrentServer.service.TorrentServerNotification" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
