--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -4,6 +4,7 @@ permissions:
   contents: write
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - '*'
@@ -23,62 +24,6 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - uses: dorny/paths-filter@v2
-        id: filter
-        with:
-          filters: |
-            gofiles:
-              - 'go/**'
-  
-  
-      - name: Set up Go
-        if: steps.filter.outputs.gofiles == 'true'
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.21' 
-  
-      - name: Install Android SDK
-        if: steps.filter.outputs.gofiles == 'true'
-        uses: android-actions/setup-android@v2
-        with:
-          sdk-version: '30' 
-  
-      - name: Install Android NDK
-        if: steps.filter.outputs.gofiles == 'true'
-        uses: nttld/setup-ndk@v1
-        with:
-          ndk-version: r25b
-  
-      - name: Install GoMobile
-        if: steps.filter.outputs.gofiles == 'true'
-        run: go install golang.org/x/mobile/cmd/gomobile@latest
-  
-      - name: Build GoMobile app
-        if: steps.filter.outputs.gofiles == 'true'
-        run: |
-          cd go/torrserver
-          go get golang.org/x/mobile/bind
-          gomobile init
-          gomobile bind -target=android -androidapi 23 -o ../../app/libs/server.aar
-  
-      - name: Commit build library
-        if: steps.filter.outputs.gofiles == 'true'
-        run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add app/libs/server.aar
-          git add app/libs/server-sources.jar
-          git commit -m "Add compiled torrserver library"
-        
-      - name: Push changes
-        if: steps.filter.outputs.gofiles == 'true'
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: kuukiyomi
-
-
-      - name: Validate Gradle Wrapper
         uses: gradle/actions/wrapper-validation@d156388eb19639ec20ade50009f3d199ce1e2808 # v4.1.0
 
       - name: Set up JDK
@@ -104,78 +49,3 @@ jobs:
         with:
           name: mapping-${{ github.sha }}
           path: app/build/outputs/mapping/standardRelease
-
-      # Sign APK and create release for tags
-
-      - name: Get tag name
-
-        if: startsWith(github.ref, 'refs/tags/') && github.repository == 'aniyomiorg/aniyomi'
-        run: |
-          set -x
-          echo "VERSION_TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
-
-      - name: Sign APK
-        if: startsWith(github.ref, 'refs/tags/') && github.repository == 'aniyomiorg/aniyomi'
-        uses: r0adkll/sign-android-release@349ebdef58775b1e0d8099458af0816dc79b6407 # v1
-        with:
-          releaseDirectory: app/build/outputs/apk/standard/release
-          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-          alias: ${{ secrets.ALIAS }}
-          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-          keyPassword: ${{ secrets.KEY_PASSWORD }}
-        env:
-          BUILD_TOOLS_VERSION: "34.0.0"
-
-      - name: Clean up build artifacts
-        if: startsWith(github.ref, 'refs/tags/') && github.repository == 'aniyomiorg/aniyomi'
-        run: |
-          set -e
-
-          mv app/build/outputs/apk/standard/release/app-standard-universal-release-unsigned-signed.apk aniyomi-${{ env.VERSION_TAG }}.apk
-          sha=`sha256sum aniyomi-${{ env.VERSION_TAG }}.apk | awk '{ print $1 }'`
-          echo "APK_UNIVERSAL_SHA=$sha" >> $GITHUB_ENV
-
-          cp app/build/outputs/apk/standard/release/app-standard-arm64-v8a-release-unsigned-signed.apk aniyomi-arm64-v8a-${{ env.VERSION_TAG }}.apk
-          sha=`sha256sum aniyomi-arm64-v8a-${{ env.VERSION_TAG }}.apk | awk '{ print $1 }'`
-          echo "APK_ARM64_V8A_SHA=$sha" >> $GITHUB_ENV
-
-          cp app/build/outputs/apk/standard/release/app-standard-armeabi-v7a-release-unsigned-signed.apk aniyomi-armeabi-v7a-${{ env.VERSION_TAG }}.apk
-          sha=`sha256sum aniyomi-armeabi-v7a-${{ env.VERSION_TAG }}.apk | awk '{ print $1 }'`
-          echo "APK_ARMEABI_V7A_SHA=$sha" >> $GITHUB_ENV
-
-          cp app/build/outputs/apk/standard/release/app-standard-x86-release-unsigned-signed.apk aniyomi-x86-${{ env.VERSION_TAG }}.apk
-          sha=`sha256sum aniyomi-x86-${{ env.VERSION_TAG }}.apk | awk '{ print $1 }'`
-          echo "APK_X86_SHA=$sha" >> $GITHUB_ENV
-
-          cp app/build/outputs/apk/standard/release/app-standard-x86_64-release-unsigned-signed.apk aniyomi-x86_64-${{ env.VERSION_TAG }}.apk
-          sha=`sha256sum aniyomi-x86_64-${{ env.VERSION_TAG }}.apk | awk '{ print $1 }'`
-          echo "APK_X86_64_SHA=$sha" >> $GITHUB_ENV
-
-      - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/') && github.repository == 'aniyomiorg/aniyomi'
-        uses: softprops/action-gh-release@c062e08bd532815e2082a85e87e3ef29c3e6d191 # v2.0.8
-        with:
-          tag_name: ${{ env.VERSION_TAG }}
-          name: Aniyomi ${{ env.VERSION_TAG }}
-          body: |
-            ---
-
-            ### Checksums
-
-            | Variant | SHA-256 |
-            | ------- | ------- |
-            | Universal | ${{ env.APK_UNIVERSAL_SHA }}
-            | arm64-v8a | ${{ env.APK_ARM64_V8A_SHA }}
-            | armeabi-v7a | ${{ env.APK_ARMEABI_V7A_SHA }}
-            | x86 | ${{ env.APK_X86_SHA }}
-            | x86_64 | ${{ env.APK_X86_64_SHA }} |
-          files: |
-            aniyomi-${{ env.VERSION_TAG }}.apk
-            aniyomi-arm64-v8a-${{ env.VERSION_TAG }}.apk
-            aniyomi-armeabi-v7a-${{ env.VERSION_TAG }}.apk
-            aniyomi-x86-${{ env.VERSION_TAG }}.apk
-            aniyomi-x86_64-${{ env.VERSION_TAG }}.apk
-          draft: true
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
