--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: gradle validare
+      - name: Gradle validation
         uses: gradle/actions/wrapper-validation@d156388eb19639ec20ade50009f3d199ce1e2808 # v4.1.0
 
       - name: Set up JDK
